USAGOV-1469-Homepage-changes-grid-alignment: fix cards bug

--- a/web/themes/custom/usagov/sass/_carousel.scss
+++ b/web/themes/custom/usagov/sass/_carousel.scss
@@ -87,7 +87,6 @@
 
     .slick-track {
       display: flex !important;
-      margin-left: 18px;
 
       .slick-slide {
         height: inherit !important;
